Updated the csvparser method